src/styles/_header.scss
#header-image {
  position: relative;
  width: 100%;
  img {
    z-index: -2;
    position: fixed;
    width: 100%;
  }
  canvas {
    z-index: 1;
    position: fixed;
    width: 100%;
    height: auto;
    display: block;
    background: #000;
    aspect-ratio: 1440 / 175;

    @media (max-width: 900px) {
      aspect-ratio: 3 / 1;
    }
    @media (max-width: 600px) {
      aspect-ratio: 2 / 1;
    }
  }
  .header-name {
    position: fixed;
    z-index: 2;
    left: 2.5%;
    top: calc(100vw * 175 / 1440 * 0.72);
    color: #fff;
    font-family: Georgia, Times, "Times New Roman", serif;
    font-size: 1.6vw;
    line-height: 1;
    pointer-events: none;

    @media (max-width: 900px) {
      font-size: 3vw;
      top: calc(100vw / 3 * 0.72);
    }
    @media (max-width: 600px) {
      font-size: 4vw;
      top: calc(100vw / 2 * 0.72);
    }
  }
  #fullscreen-btn {
    position: fixed;
    z-index: 2;
    top: calc(100vw * 175 / 1440 * 0.12);
    right: 1.5vw;
    background: none;
    border: 1px solid rgba(255, 255, 255, 0.3);
    color: rgba(255, 255, 255, 0.5);
    font-size: 1.2vw;
    padding: 0.2vw 0.5vw;
    cursor: pointer;
    opacity: 0;
    transition: opacity 0.3s;
    line-height: 1;
    border-radius: 3px;
    &:hover {
      background: rgba(255, 255, 255, 0.1);
      color: rgba(255, 255, 255, 0.8);
      border-color: rgba(255, 255, 255, 0.5);
    }
  }
  &:hover #fullscreen-btn {
    opacity: 1;
  }
  &:fullscreen {
    background: #000;
    canvas {
      position: static;
      width: 100%;
      height: 100%;
      aspect-ratio: auto;
    }
    .header-name {
      position: absolute;
      bottom: 3%;
      top: auto;
      left: 2.5%;
      font-size: 2vw;
    }
    #fullscreen-btn {
      position: absolute;
      top: 1vw;
      right: 1vw;
      font-size: 1.5vw;
    }
  }
}

img.buffer {
  opacity: 0;
  width:100%;
  pointer-events: none;
}

#header {
  z-index: 5;
}

#sticky-social {
  #instrument {
    z-index: -1;
    position: fixed;
    width: 100%;
    pointer-events: auto;
    margin-bottom: 3em;
  }
}

